[gd_scene load_steps=2 format=2]

[ext_resource path="res://Util/SpellChecker/SpellCheckerTest.gd" type="Script" id=1]

[node name="SpellCheckerTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 1018.0
margin_bottom = 720.0
size_flags_horizontal = 3
wrap_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1030.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MistakeItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 310.0
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 250.0
margin_bottom = 334.0
text = "Apply fix"

[node name="FixAllButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 250.0
margin_bottom = 358.0
text = "Auto-Fix all!"

[node name="RunButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 250.0
margin_bottom = 382.0
text = "Check again"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 250.0
margin_bottom = 406.0

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Confirm!"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 250.0
margin_bottom = 20.0
text = "Cancel"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 250.0
margin_bottom = 720.0
size_flags_vertical = 3

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/MistakeItemList" to="." method="_on_MistakeItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/FixAllButton" to="." method="_on_FixAllButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
